--- a/overview/architecture-features-integration/integration-overview.mdx
+++ b/overview/architecture-features-integration/integration-overview.mdx
@@ -1,134 +1,132 @@
 ---
-title: "Integration with Other Tools & Systems"
-description: "Explore how GoogleTest integrates with industry build tools, CI pipelines, and cross-platform environments. Summarize supported compilers, platforms, and links to related projects and extensions for popular editors and test runners."
+title: "Integration & Ecosystem"
+description: "Explore how GoogleTest and GoogleMock fit seamlessly into build systems, editors, CI pipelines, and broader developer workflows. Learn about compatibility with platforms, extensions (VS Code, test runners), and community integrations that extend the core offering."
 ---
 
-# Integration with Other Tools & Systems
+# Integration & Ecosystem
 
-Explore how GoogleTest seamlessly integrates with industry-standard build tools, continuous integration (CI) pipelines, and supports cross-platform development environments. This guide highlights supported compilers and platforms, as well as extensions for popular editors and test runners, empowering you to incorporate GoogleTest smoothly into your development workflows.
+Explore how GoogleTest and GoogleMock fit seamlessly into build systems, editors, CI pipelines, and broader developer workflows. Learn about compatibility with platforms, extensions (VS Code, test runners), and community integrations that extend the core offering.
 
 ---
 
-## 1. Supported Compilers and Platforms
+## Overview
 
-GoogleTest is designed to be highly portable and supports a wide array of C++ compilers and operating systems used throughout the industry. Ensuring compatibility across diverse environments allows teams to adopt GoogleTest without worrying about platform restrictions or compiler quirks.
+Integrating GoogleTest and GoogleMock effectively into your development ecosystem unlocks their full power and streamlines your testing workflows. This page guides you through the key integration points and ecosystem tools that make adoption easier, more robust, and developer-friendly.
 
-### Supported Platforms
-- **Windows:** Full support including MSVC, MinGW
-- **Linux:** Various distributions supported with GCC and Clang
-- **macOS:** Native support via Clang
-- **BSD Variants:** Supported with appropriate toolchains
-- **Embedded platforms:** Partial support where C++11 is available
-
-### Supported Compilers
-- **GCC:** Versions 4.8 and above fully supported
-- **Clang:** Versions 3.3 and above fully supported
-- **MSVC:** Visual Studio 2015 and newer
-
-### Cross-Platform Portability
-GoogleTest abstracts platform differences, allowing testers to write unified test code that runs consistently regardless of the underlying OS or compiler. This enables reliable testing in heterogeneous environments and facilitates continuous integration pipelines targeting multiple build agents.
+GoogleTest is designed with broad compatibility and flexibility in mind. Whether you are working in local development environments or large-scale continuous integration pipelines, GoogleTest and GoogleMock provide seamless fit and extensibility.
 
 
-## 2. Build System Integrations
+## Platform Compatibility
 
-GoogleTest delivers official support and detailed guides for major build tools to streamline integration.
+GoogleTest supports a variety of platforms, including Linux, Windows, and Mac OS. Its portable design ensures consistent behavior across environments:
 
-### CMake
-- Official CMake support with `FetchContent` and `ExternalProject` modules.
-- Predefined CMake targets for easy linking (`gtest`, `gtest_main`).
-- Sample `CMakeLists.txt` snippets demonstrate adding GoogleTest as an external dependency.
+- **Linux/macOS**: Easily integrate with native build tools and terminal-based workflows.
+- **Windows**: Compatible with Visual Studio and MSBuild.
+- **Embedded Systems**: Supports Arduino and other embedded platforms, with an initialization interface tailored for limited environments.
 
-### Bazel
-- Native Bazel rules provided for GoogleTest and GoogleMock.
-- Clear guidance on importing and linking the libraries in Bazel build files.
-
-### Manual Build
-- Instructions for manual compilation and linking.
-- Examples on compiling with various compilers.
-
-### Other Build Systems
-- Guidelines on adapting GoogleTest for proprietary build systems.
-- Tips for creating custom build scripts.
+For many platforms, GoogleTest’s CMake configuration provides simple and reproducible build integration.
 
 
-## 3. Continuous Integration Pipelines
+## Build System Integration
 
-GoogleTest is optimized for automated test execution in CI environments. It outputs results in formats friendly to CI tools and can be easily integrated into build pipelines.
+### Standalone and Embedded Builds
 
-### Test Result Output
-- Supports XML output suitable for Jenkins, GitLab CI, TeamCity.
-- Configurable to output detailed test reports, including failures and durations.
+GoogleTest's CMake support lets you build it standalone or embed within your existing CMake projects. Techniques include:
 
-### Integration Tips
-- Run tests as part of pre-commit or nightly builds.
-- Fine-tune verbosity for CI logs to balance detail with readability.
+- Using `FetchContent` to fetch GoogleTest during your build configuration phase.
+- Adding GoogleTest as a git submodule for controlled versioning.
+- Linking GoogleTest statically or as a shared library according to your project needs.
 
-### Handling Flaky Tests
-- Using GoogleTest’s retry and filtering features to reduce flaky test impact.
+This flexible integration helps avoid version conflicts and ensures consistent compiler/linker settings between your tests and production code.
 
 
-## 4. IDE and Editor Extensions
+### Other Build Tools
 
-Productivity is enhanced through support for popular editors and IDEs.
-
-### Visual Studio
-- GoogleTest extensions available for test discovery, debugging, and execution.
-- Integration with Visual Studio Test Explorer.
-
-### CLion and JetBrains IDEs
-- Native GoogleTest support including test running, debugging, and coverage.
-
-### VSCode
-- Extensions available for GoogleTest support with features like running and debugging individual tests.
-
-### Emacs and Vim
-- Custom snippets and modes are available for quicker test creation and navigation.
+While CMake is the primary focus, GoogleTest can also be integrated with other build systems like Bazel, Makefiles, or Visual Studio project files. You need only ensure proper header and library inclusion.
 
 
-## 5. Test Runners and Related Projects
+## Editor and IDE Support
 
-GoogleTest integrates with and complements several testing tools and frameworks:
+Many modern editors and IDEs provide extensions or plugins to leverage GoogleTest features directly:
 
-- **GoogleMock:** For mocking C++ interfaces; shares the same integration points.
-- **Third-Party Test Runners:** Compatibility layers for running GoogleTest tests within other frameworks.
-- **Coverage Tools:** Integration with code coverage tools such as gcov, lcov, and llvm-cov.
+- **Visual Studio**: Native support for running and debugging GoogleTest tests with test explorer integration.
+- **VS Code**: Extensions allow running, filtering, and debugging tests inside the editor.
+- **CLion**: Offers built-in test discovery and launch capabilities for GoogleTest.
 
-
-## 6. Best Practices for Integration
-
-- Add GoogleTest as an external dependency rather than copying sources to ease maintenance.
-- Prefer standard build integrations (CMake, Bazel), which handle platform nuances.
-- Use the native test runners provided by your IDE or CI tooling to get the most out of GoogleTest’s rich output.
-- Regularly update GoogleTest to leverage improvements in platform support and CI compatibility.
+These editor integrations enhance productivity, giving you rich navigation, test visualization, and failure diagnostics right where you write code.
 
 
-## 7. Troubleshooting & Further Help
+## CI and Test Runners
 
-### Common Integration Issues
-- Mismatched compiler versions causing ABI incompatibilities.
-- Linking errors due to missing GoogleTest libraries.
-- Incorrect runtime configurations in CI environments.
+GoogleTest's design supports smooth integration in automated test pipelines:
 
-### Debugging Support
-- Enable verbose output with `--gtest_verbose` flag.
-- Use isolated test targets to narrow down failures.
+- It emits results in JUnit-compatible XML or JSON formats, consumable by most CI platforms.
+- Supports sharding, randomizing, and repeating tests to improve parallelism and detection of flaky tests.
+- Its robust flag-driven filtering enables running specific test subsets, optimizing build times.
 
-### Community Support and Contribution
-- Participate in the GoogleTest GitHub repository for bug reports and feature requests.
-- Explore tutorials and deep-dives in the [GoogleTest documentation](https://google.github.io/googletest/).
+Implementing GoogleTest in your CI allows fast feedback loops and high confidence in software correctness.
+
+
+## Extensions and Community Tools
+
+### GoogleMock Integration
+
+GoogleMock works hand-in-hand with GoogleTest to enable mocking and expectations, extending behavior-driven test patterns.
+
+Integration is seamless—GoogleMock headers and libraries are included alongside GoogleTest, allowing you to write mocks that fit your existing workflow.
+
+
+### Ecosystem and Plugins
+
+The community and Google continue to extend GoogleTest tooling:
+
+- Plugins to integrate with popular CI providers like Jenkins, GitHub Actions, and GitLab.
+- IDE and command-line tools that analyze test coverage and performance.
+- Custom reporters based on the event listener API to tailor test output.
+
+Exploring such tools can enhance your test insight and workflow efficiency.
+
+
+## Best Practices for Integration
+
+- Use GoogleTest's flexible CMake integration to tightly couple your tests and production builds.
+- Leverage IDE support for immediate, in-context test runs and debug sessions.
+- Implement XML/JSON output to integrate with your CI dashboards and reporting tools.
+- Utilize sharding and filtering features in your CI to optimize test performance.
+- Regularly update your integration points to benefit from improvements in GoogleTest and GoogleMock.
+
+
+## Troubleshooting Integration Issues
+
+When integrating GoogleTest:
+
+- Ensure your build system passes appropriate include and link flags.
+- Verify that your test executables call `testing::InitGoogleTest()` before `RUN_ALL_TESTS()`.
+- Avoid mixing debug/release builds between your core application and GoogleTest.
+- If test discovery fails in your IDE, check compatibility and plugin versions.
+
+Consult the [Troubleshooting Common Issues](https://github.com/google/googletest/blob/main/docs/quick-validation.md) for specifics.
 
 
 ---
 
-## Related Documentation and Resources
-
-- [Installation Methods (CMake, Bazel, Manual)](/getting-started/prerequisites-and-installation/installation-methods)
-- [Configuring Your Project](/getting-started/configuration-and-first-run/project-setup)
-- [Using and Creating Mock Objects](/guides/mocking-and-advanced-testing/mock-objects)
-- [Integration Overview Diagram](/overview/architecture-features-integration/architecture-overview-diagram)
-- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html)
+_For further details on GoogleTest features and architecture, see [Feature Overview: Test, Assert, Mock](/overview/architecture-features-integration/features-at-a-glance). For practical guides on writing tests and using mocks, visit the [Core Testing Workflows](/guides/core-workflows) section._
 
 
 ---
 
-For a practical deep dive, consult the "Installation Methods" and "Project Setup" guides to configure GoogleTest with your chosen build system and platform. Explore extensions for your development environment to optimize your testing workflow.
+### Related Links
+
+- [GoogleTest Primer](primer.md) - Getting started with GoogleTest basics.
+- [Advanced GoogleTest Topics](advanced.md) - Unlock advanced test patterns.
+- [GoogleMock Cookbook](gmock_cook_book.md) - Practical mocking tips.
+- [GoogleTest API Reference](reference/testing.md) - Detailed API documentation.
+
+---
+
+### Next Steps
+
+1. Review your build environment and ensure GoogleTest integration via CMake or other build scripts.
+2. Explore IDE plugins for enhanced test development experience.
+3. Configure your CI pipelines to consume XML/JSON test outputs and use sharding if needed.
+4. Experiment with the event listener API to customize test reporting and monitoring.
