--- a/getting-started/prerequisites-installation/system-requirements.mdx
+++ b/getting-started/prerequisites-installation/system-requirements.mdx
@@ -1,159 +1,194 @@
 ---
 title: "System Requirements"
-description: "Outlines the minimum system requirements to use GoogleTest and GoogleMock, including supported operating systems, compilers, and the necessity for C++17 or later. Guides users in verifying whether their development environment meets these foundational needs before proceeding."
+description: "Covers supported operating systems, compiler/toolchain versions, and C++ standard requirements. Start here to confirm your environment compatibility and prepare your toolchain for GoogleTest and GoogleMock."
 ---
 
-# System Requirements for GoogleTest and GoogleMock
+# System Requirements
 
-This page outlines the fundamental system requirements necessary to build and use GoogleTest and GoogleMock successfully. Before proceeding with installation and configuration, ensure your development environment meets the following conditions.
+Ensure your development environment is fully compatible before proceeding to install and use GoogleTest and GoogleMock. This page details the supported operating systems, compiler and toolchain versions, and C++ standard requirements necessary to build and run these frameworks successfully.
 
 ---
 
-## 1. Supported Operating Systems
+## Supported Operating Systems
 
-GoogleTest and GoogleMock are designed to be cross-platform and officially support the following operating systems:
+GoogleTest and GoogleMock have been rigorously tested and are officially supported on the following platforms:
 
 - **Linux** (including various distributions)
-- **Windows** (Desktop editions, with Visual Studio support)
-- **macOS** (including integration with Xcode)
+- **Windows** (Desktop versions, including MSVC and MinGW builds)
+- **macOS**
 
-These platforms are actively maintained and tested to ensure compatibility and stable operation.
+Additionally, support extends to a variety of UNIX-like and BSD systems, including FreeBSD, OpenBSD, NetBSD, Solaris, and more, though these might see less frequent testing.
 
----
+### Detailed Platform Details
 
-## 2. Compiler Requirements
+| Platform            | Notes                                                             |
+|---------------------|-------------------------------------------------------------------|
+| Linux               | Full support, including Android (API level 9 or higher)           |
+| Windows Desktop     | Supported with MSVC 2017 Update 3 (and later) and MinGW           |
+| macOS               | Fully supported with Apple toolchains                             |
+| BSD Variants        | Support available but testing is less frequent                    |
+| Embedded/Mobile     | Limited or no support (e.g., Windows Mobile, Windows Phone, RT)   |
 
-To build GoogleTest and GoogleMock, your compiler must support C++17 or later standards. The following compilers and versions are recognized as suitable:
 
-- GCC with support for C++17
-- Clang with C++17 support
-- Microsoft Visual Studio 2017 Update 3 (MSVC 19.11) or newer
+## Compiler and Toolchain Requirements
 
-Make sure your compiler is configured to use at least C++17. This can be enforced in CMake or your build system by specifying the C++ standard explicitly, for example:
+### Minimum C++ Compiler Versions
+
+GoogleTest and GoogleMock require a modern C++17 compatible compiler. Confirm your toolchain version meets or exceeds the following:
+
+- **GCC:** Version 7.0 or later
+- **Clang:** Version 3.4 or later
+- **MSVC:** Visual Studio 2017 Update 3 (v19.11) or later
+
+> <Tip> Make sure your compiler’s C++ standard mode is set to C++17 or above. Setting this explicitly during build helps avoid compatibility issues. </Tip>
+
+### C++ Standard
+
+Your build environment must support at least **C++17**. GoogleTest verifies this requirement at compile time:
+
+```cpp
+#if !defined(__cplusplus) || __cplusplus < 201703L
+#error "C++ versions less than C++17 are not supported."
+#endif
+```
+
+If your project is using CMake, set this requirement with:
 
 ```cmake
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 ```
 
-If your project does not use CMake or you want to pass compiler flags directly, you can add:
+Or pass appropriate flags to your compiler if not using CMake.
 
-```bash
--DCMAKE_CXX_FLAGS="-std=c++17"
-```
+### Threading Support
 
-Ensure your build environment respects these requirements to avoid compilation errors.
+GoogleTest is thread-safe on systems where pthreads are available. If your environment does not support pthreads, or automatic detection fails, you may need to manually enable or disable pthread usage by setting the macro `GTEST_HAS_PTHREAD`:
 
----
+- Enable pthread support explicitly:
 
-## 3. Threading and Libraries
-
-GoogleTest is thread-safe on platforms where the `pthread` library is available and supported.
-
-- On **Unix-like systems** (Linux, macOS), pthread support is assumed and enabled.
-- On **Windows**, native threading primitives are used.
-
-If your environment fails to detect pthread support automatically, you can manually enable or disable it by passing the following compiler flags:
-
-```bash
--DGTEST_HAS_PTHREAD=1    # to enable
--DGTEST_HAS_PTHREAD=0    # to disable
-```
-
-When using your own build scripts, remember to link against pthread (`-pthread`) and add any necessary compiler flags for threading support.
-
----
-
-## 4. Minimum C++ Language Standard
-
-GoogleTest mandates the use of C++17 features. If your compiler or environment uses an older standard, GoogleTest will not compile. Since this is enforced inside `gtest-port.h`, attempting to compile with C++14 or earlier will result in an error similar to:
-
-```
-#error C++ versions less than C++17 are not supported.
-```
-
-To fix this, explicitly set C++17 or newer standard support.
-
----
-
-## 5. Build Tooling
-
-To build GoogleTest and GoogleMock efficiently, the following tooling is recommended:
-
-- **CMake (version 3.14 or newer)**: The primary build system used by GoogleTest.
-- For Windows, having **Visual Studio** installed enables building via `.sln` files generated by CMake.
-- On macOS, having **Xcode** installed enables building via `.xcodeproj` files generated by CMake.
-
-If you prefer other build tools or package managers, ensure they support linking to C++17 projects and integration with pthread (or equivalent threading).
-
----
-
-## 6. Additional Notes
-
-- **Dynamic vs Static Runtimes on Windows:**
-  Visual Studio by default links C runtimes dynamically, but GoogleTest links statically. This may cause linker errors such as
-  `error LNK2038: mismatch detected for 'RuntimeLibrary'`.
-
-  You can fix this by enabling the CMake option `gtest_force_shared_crt` which will link GoogleTest's runtimes dynamically:
-
-  ```bash
-  cmake .. -Dgtest_force_shared_crt=ON
+  ```
+  -DGTEST_HAS_PTHREAD=1
   ```
 
-- **Optional Macros for Tweaking:**
-  GoogleTest can be customized via compiler flags starting with `-DGTEST_`, for example, to control thread-safety, macro name clashes, or shared library usage.
+- Disable pthread support explicitly:
 
+  ```
+  -DGTEST_HAS_PTHREAD=0
+  ```
 
----
+If your build system uses CMake targets, linking with pthreads is usually handled automatically.
 
-## Quick Verification Checklist Before Installation
+### Exception and RTTI Support
 
-1. Confirm your OS is Linux, Windows, or macOS.
-2. Verify your compiler supports C++17.
-3. Check that pthread is available or appropriately configured.
-4. Confirm CMake (≥3.14) is installed if using CMake builds.
-5. On Windows, have Visual Studio ready for generated solution files.
+GoogleTest checks for the availability of exceptions and RTTI (Run-Time Type Information). While exceptions are optional, some features or user code may rely on them.
 
-
-## Troubleshooting Tips
-
-- **C++17 Support Error:**
-  Ensure your build system or compiler flags indicate `-std=c++17` or equivalent.
-
-- **Threading Link Errors:**
-  If link errors about pthread occur, confirm your linker flags include `-pthread` on Unix-like systems.
-
-- **Visual Studio Runtime Mismatch:**
-  Use `gtest_force_shared_crt` to align runtime linkage.
-
-- **Unsupported OS or Compiler:**
-  Check the [Supported Platforms](https://github.com/google/oss-policies-info/blob/main/foundational-cxx-support-matrix.md) for compatible versions.
-
+Recommended to compile with exceptions enabled. RTTI usage depends on your compiler and build flags but is detected automatically.
 
 ---
 
-## Where to Go Next
+## File System and Stream Redirection
 
-After confirming these system requirements, proceed with:
+GoogleTest requires file system support and the ability to redirect streams for some advanced features like death tests and output verification.
 
-- [Installation on Linux/macOS](../prerequisites-installation/installing-on-linux-macos)
-- [Installation on Windows](../prerequisites-installation/installing-on-windows)
-- [Using Alternative Build Systems](../prerequisites-installation/alternative-build-systems)
+- Most desktop and server OSes provide the required file system support.
+- On embedded or mobile platforms (e.g., Windows Mobile, some RT environments), these features may be limited.
 
-For further understanding of why these requirements matter, see the [Supported Platforms](../../docs/platforms.md) guide.
-
+If file system features are missing, certain GoogleTest features will be disabled.
 
 ---
 
-### References
+## Operating System Macros Used Internally
 
-- [GoogleTest GitHub: Generic Build Instructions](https://github.com/google/googletest/blob/main/googletest/README.md)
-- [GoogleTest Primer: Basic Concepts](../primer.md)
-- [Supported Platforms Matrix](https://github.com/google/oss-policies-info/blob/main/foundational-cxx-support-matrix.md)
-- [Build with CMake](https://cmake.org/)
+GoogleTest automatically defines macros indicating the detected operating system, such as:
+
+- `GTEST_OS_WINDOWS`
+- `GTEST_OS_LINUX`
+- `GTEST_OS_MAC`
+
+Users generally do not need to set these manually but can rely on them for conditional compilation.
 
 ---
 
-*This page is part of the Getting Started sequence.*
+## Practical Tips for Environment Preparation
+
+- **Verify your compiler version:** Run `gcc --version`, `clang --version`, or check Visual Studio version before building.
+- **Ensure your build flags enable C++17:** Explicitly set your compiler to `-std=c++17` or equivalent.
+- **Use CMake for easy environment checks:** GoogleTest's CMake scripts handle many compatibility issues automatically.
+- **Check pthreads availability:** On Linux/macOS, pthreads is generally available; Windows uses native threading support.
+- **On Windows:** Pay attention to whether you need dynamic (DLL) or static runtime linkage and set `gtest_force_shared_crt` in CMake if needed.
 
 ---
+
+## Common Pitfalls
+
+- Using an older compiler version without C++17 support causes immediate compilation failure.
+- Not setting the C++ standard mode explicitly, leading to subtle build errors.
+- Missing pthreads support or wrong `GTEST_HAS_PTHREAD` setting causes linking or runtime threading issues.
+- Building on unsupported or exotic platforms may disable some features (e.g., death tests).
+
+---
+
+## Troubleshooting
+
+<AccordionGroup title="Common System Requirements Issues">
+<Accordion title="C++17 Compliance Error">
+If you see a compile-time error about unsupported C++ versions, verify your compiler and build flags support C++17.
+
+- Confirm compiler version.
+- Set `-std=c++17` or equivalent in your build.
+</Accordion>
+<Accordion title="Pthread Not Detected">
+If you encounter linker errors related to pthread functions or thread safety issues:
+
+- Verify pthreads is installed.
+- Define `-DGTEST_HAS_PTHREAD=1` to force enable.
+- Link with pthreads (`-lpthread`).
+</Accordion>
+<Accordion title="Unsupported Platform Features">
+Features like death tests may be disabled if file system or stream redirection support is absent.
+
+- Check platform compatibility.
+- Consider alternative testing strategies if platform limitations exist.
+</Accordion>
+</AccordionGroup>
+
+---
+
+## Further Information
+
+- See [Install with CMake](/getting-started/prerequisites-installation/installation-cmake) for detailed build steps.
+- Consult the [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md) for next steps in writing and running tests.
+- Review the [Integration & Ecosystem](/overview/architecture-features-integration/integration-overview) page to understand how GoogleTest fits with your build and CI system.
+
+---
+
+## Summary Checklist Before You Build
+
+- [x] Operating system is supported (Linux, Windows Desktop, macOS)
+- [x] Compiler version supports C++17 or higher
+- [x] C++17 standard enabled in build flags
+- [x] Pthread libraries are available or `GTEST_HAS_PTHREAD` properly set
+- [x] File system and stream capabilities available for advanced tests
+- [x] Runtime linkage settings align with your project needs on Windows
+
+By verifying these requirements, you ensure a smooth build and execution of GoogleTest and GoogleMock on your development environment.
+
+---
+
+_For full details on environment-specific macros and feature detection, see the [internal gtest-port.h source file](https://github.com/google/googletest/blob/main/googletest/include/gtest/internal/gtest-port.h).
+
+---
+
+<Callout>
+For detailed build instructions, see the [Install with CMake](https://github.com/google/googletest/blob/main/googletest/README.md#generic-build-instructions) page.
+</Callout>
+
+---
+
+## Related Documentation
+
+- [Setup and Installation with CMake](/getting-started/prerequisites-installation/installation-cmake)
+- [Writing and Running Your First Test](/getting-started/first-test-setup/writing-running-first-test)
+- [Integration & Ecosystem](/overview/architecture-features-integration/integration-overview)
+- [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md)
