--- a/getting-started/prerequisites-installation/installation-bazel.mdx
+++ b/getting-started/prerequisites-installation/installation-bazel.mdx
@@ -1,78 +1,78 @@
 ---
-title: "Installing with Bazel"
-description: "Demonstrates how to add GoogleTest and GoogleMock as dependencies in Bazel-based projects, including repository setup and relevant Bazel build rule configuration."
+title: "Install with Bazel"
+description: "Instructions for adding GoogleTest and GoogleMock to your Bazel workspace, including dependency setup and example usage. Ideal for Bazel-centric or large polyglot codebases."
 ---
 
-# Installing with Bazel
+# Install with Bazel
 
-This guide demonstrates how to add **GoogleTest** and **GoogleMock** as dependencies in Bazel-based projects. You will learn how to set up the Bazel workspace properly, configure Bazel build rules, and successfully build and run your first test binary using GoogleTest.
+This guide provides clear instructions to add **GoogleTest** and **GoogleMock** to your Bazel workspace. It covers dependency setup, workspace configuration, build file declarations, and running your first test. This page is ideal for users working with Bazel-centric or large polyglot codebases aiming for seamless C++ testing integration.
 
 ---
 
 ## 1. Prerequisites & System Requirements
 
-Before integrating GoogleTest with Bazel, ensure the following prerequisites are met:
+Before you start, ensure your environment meets the following:
 
-- **Operating System**: Linux, macOS, or Windows
-- **C++ Compiler**: Supports at least C++17 (GCC, Clang, MSVC, etc.)
-- **Bazel**: Version 7.0 or higher installed and operational
+- **Operating System:** Linux, macOS, or Windows
+- **C++ Compiler:** Supports at least C++17 (e.g., GCC, Clang, MSVC)
+- **Bazel Version:** 7.0 or higher
 
-> For Bazel installation instructions, see the [Bazel installation guide](https://bazel.build/install).
+If you need to install Bazel, visit the official [Bazel installation guide](https://bazel.build/install).
 
+> See the [System Requirements](getting-started/prerequisites-installation/system-requirements) page for comprehensive platform compatibility and compiler notes.
 
-## 2. Setup Your Bazel Workspace
+---
 
-A Bazel workspace is a directory where your source files and build files reside.
+## 2. Setting Up Your Bazel Workspace
 
-### Step 1: Create a workspace directory
+A Bazel workspace organizes your source files and defines external dependencies needed during build.
 
-Open your terminal and run:
+### Step 1: Create a Workspace Directory
+
+Open your terminal and execute:
 
 ```bash
 mkdir my_workspace && cd my_workspace
 ```
 
-### Step 2: Define the `MODULE.bazel` file
+### Step 2: Create the `MODULE.bazel` File
 
-To consume GoogleTest via Bazel Central Registry, create a file named `MODULE.bazel` in your workspace root with the following content:
+This file declares your GoogleTest dependency via Bazel's Central Registry.
+
+Create a file named `MODULE.bazel` with the following content:
 
 ```python
 # MODULE.bazel
 
-# Specify the version of GoogleTest to use
+# Declare the GoogleTest dependency with the latest stable version
 bazel_dep(name = "googletest", version = "1.17.0")
 ```
 
-This declares GoogleTest as a dependency for your Bazel project.
+> **Tip:** Check the [Bazel Central Registry](https://registry.bazel.build/modules/googletest) for the most recent version of GoogleTest.
 
-<Tip>
-Always check the [Bazel Central Registry](https://registry.bazel.build/modules/googletest) for the most current GoogleTest version before declaring dependencies.
-</Tip>
+---
 
+## 3. Writing Your First Test
 
-## 3. Create Your First Test Binary
+Create a simple test source file to verify setup.
 
-With your workspace set up, you can now write and build a simple test.
+### Step 1: Create `hello_test.cc`
 
-### Step 1: Write a basic test file
-
-Create a file named `hello_test.cc` in your workspace directory with the following content:
+In your workspace directory, create a file named `hello_test.cc` and add:
 
 ```cpp
 #include <gtest/gtest.h>
 
-// A simple test case demonstrating GoogleTest assertions.
+// Demonstrates basic assertions
 TEST(HelloTest, BasicAssertions) {
-  // Expect that "hello" and "world" are not equal.
-  EXPECT_STRNE("hello", "world");
-  // Expect that 7 multiplied by 6 equals 42.
-  EXPECT_EQ(7 * 6, 42);
+  EXPECT_STRNE("hello", "world");  // Check that strings are not equal
+  EXPECT_EQ(7 * 6, 42);               // Check that multiplication is as expected
 }
 ```
 
-### Step 2: Define the Bazel BUILD file
+### Step 2: Create the Bazel Build File
 
-In the same directory, create a file called `BUILD` with the following rules:
+Create a file named `BUILD` in the same directory with the contents:
 
 ```python
 cc_test(
@@ -86,112 +86,79 @@ cc_test(
 )
 ```
 
-This declares a test binary named `hello_test` which links against GoogleTest and sets up the entry point with `gtest_main`.
+This `cc_test` rule defines a C++ test target that links against GoogleTest libraries.
 
-### Step 3: Build and run the test
+> **Note:**
+> - The `gtest` library contains GoogleTest code.
+> - The `gtest_main` library provides the default `main()` function for test executables.
 
-Execute the following command to build and run the test with C++17 standard:
+---
+
+## 4. Building and Running Your Test
+
+### Step 1: Build and Test with Bazel
+
+Run the following command to build and execute your test:
 
 ```bash
 bazel test --cxxopt=-std=c++17 --test_output=all //:hello_test
 ```
 
-You should see output indicating the test was run and passed:
+- `--cxxopt=-std=c++17` ensures the use of C++17 standard.
+- `--test_output=all` prints all test output immediately.
+
+### Expected Output Snippet:
 
 ```
-Running main() from gmock_main.cc
+INFO: Analyzed target //:hello_test ...
 [==========] Running 1 test from 1 test suite.
 [ RUN      ] HelloTest.BasicAssertions
 [       OK ] HelloTest.BasicAssertions (0 ms)
+[==========] 1 test from 1 test suite ran. (0 ms total)
 [  PASSED  ] 1 test.
-
-//:hello_test                                                     PASSED in 0.1s
 ```
 
-<Note>
-Set the `--cxxopt` flag according to your compiler. For MSVC, use `--cxxopt=/std:c++17`.
-</Note>
+When you see `[  PASSED  ] 1 test.`, your setup is successful!
 
+---
 
-## 4. Understanding Bazel Build Rule Configuration
+## 5. Best Practices and Tips
 
-- **`cc_test` rule** creates an executable for your tests.
-- The `deps` attribute points to the GoogleTest libraries provided by the Bazel Central Registry with labels:
-  - `@googletest//:gtest` — GoogleTest core library
-  - `@googletest//:gtest_main` — Provides the `main()` function to launch tests
-- The `srcs` attribute lists source files compiled into this test binary.
+- **Use Recent Versions:** Frequently check for updates on GoogleTest and Bazel to benefit from new features and fixes.
+- **Configure C++ Std Version:** Always specify `--cxxopt=-std=c++17` (or equivalent) to enforce C++17 compatibility.
+- **Dependency Versions:** Pin GoogleTest versions explicitly in your `MODULE.bazel` for reproducibility.
+- **Link Test Binaries Properly:** Always include both `@googletest//:gtest` and `@googletest//:gtest_main` in your `deps` for tests with default main.
 
-Get familiar with Bazel build specifications and `cc_test` rule in the [Bazel C++ Tutorial](https://docs.bazel.build/versions/main/tutorial/cpp.html).
-
-<Tip>
-If you want to use only GoogleTest as a library without the main function, depend on `@googletest//:gtest` alone and supply your own `main()` implementation.
-</Tip>
-
-
-## 5. Best Practices & Tips
-
-- Always specify the C++ standard (`--cxxopt=-std=c++17` or equivalent) to avoid compatibility issues.
-- Use a recent Bazel version (7.0+) to ensure compatibility with the module system and dependency management.
-- Keep `MODULE.bazel` and workspace dependencies in sync with the supported versions listed in the Bazel Central Registry.
-- Check the Bazel and GoogleTest documentation for platform-specific compiler flags, especially on Windows.
-
+---
 
 ## 6. Troubleshooting Common Issues
 
-<AccordionGroup title="Common Bazel Integration Issues">
-<Accordion title="Build fails due to C++ standard mismatch">
-Ensure you pass the correct compiler flag for C++17 in the Bazel test command:
-
-```bash
-bazel test --cxxopt=-std=c++17 //:hello_test
-```
-
-For MSVC, use:
-
-```bash
-bazel test --cxxopt=/std:c++17 //:hello_test
-```
-
-Missing this often leads to compilation errors or runtime failures.
+<AccordionGroup title="Troubleshooting GoogleTest with Bazel">
+<Accordion title="Error: Unsupported C++ Standard">
+Check that your compiler supports C++17 and use the flag `--cxxopt=-std=c++17` during build and test.
 </Accordion>
-
-<Accordion title="Cannot find GoogleTest dependencies">
-Verify that your `MODULE.bazel` includes the correct `bazel_dep` statement.
-
-Make sure you are using Bazel 7.0 or newer, as prior versions do not support the Bazel Central Registry dependency declaration.
-
-Also, ensure your `WORKSPACE` or module files do not conflict or redundantly declare GoogleTest dependencies.
+<Accordion title="Test Does Not Run or Finds No Tests">
+Ensure your test functions use the `TEST` macro and that your `cc_test` target correctly includes GoogleTest dependencies.
 </Accordion>
-
-<Accordion title="Tests do not run or no output shown">
-Use the `--test_output=all` flag when running tests to see complete output and diagnose failures:
-
-```bash
-bazel test --test_output=all //:hello_test
-```
-
-If tests still do not run, double-check that your `cc_test` rule and source files are correctly specified.
+<Accordion title="Linker Errors Related to pthread or Threading">
+Make sure to build with a compiler and platform that supports pthreads, and confirm Bazel's toolchain settings include threading support.
+</Accordion>
+<Accordion title="Bazel Version Incompatibility">
+Confirm you use Bazel 7.0 or higher. Older versions may lack the Central Registry support required for `bazel_dep`.
 </Accordion>
 </AccordionGroup>
 
+---
 
 ## 7. Next Steps
 
-- Explore writing your own tests using the [GoogleTest Primer guide](primer.md).
-- Learn about advanced mocking techniques in [Writing Your First Mock](../guides/getting-started/writing-your-first-mock).
-- Dive deeper into Bazel integration best practices in [Integrating with Build Systems](../guides/integration-and-best-practices/integrating-with-build-systems).
-
-
----
-
-By following this guide, you have successfully added GoogleTest and GoogleMock to your Bazel project, built a test binary, and executed your first test. Continue expanding your tests and integrating them into your development workflow with confidence.
+- Explore the [Primer](primer.md) to learn writing more sophisticated tests.
+- Browse [Sample Tests](samples.md) for real-world GoogleTest usage patterns.
+- Visit the [Writing and Running Your First Test](getting-started/first-test-setup/writing-running-first-test) page for deeper guidance on test workflows.
+- Review [Integration Overview](overview/architecture-features-integration/integration-overview) for details on incorporating GoogleTest in complex ecosystems.
 
 ---
 
-## Related Documentation
+**You've successfully integrated GoogleTest into your Bazel workspace and run your first test—solid foundations for building robust C++ test suites!**
 
-- [Quickstart: Building with Bazel](docs/quickstart-bazel.md)
-- [Bazel C++ Tutorial](https://docs.bazel.build/versions/main/tutorial/cpp.html)
-- [Supported Platforms](platforms.md)
-- [Installing with CMake](installation-cmake)
-- [Writing Your First Test](writing-basic-test)
+<Source url="https://github.com/google/googletest" branch="main" paths={[{"path": "docs/quickstart-bazel.md", "range": "1-104"},{"path": "BUILD.bazel", "range": "1-80"},{"path": "MODULE.bazel", "range": "1-50"}]} />
